error cannot get nach bootstrap installation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,3 +49,8 @@
       <button type="button" class="btn btn-default btn-sm" ng-click="tabs[1].disabled = ! tabs[1].disabled">Enable / Disable third tab</button>
     </p>
 </div>  
+
+
+<!-- /// nach der bootrap intallation -->
+
+<div class="alert-warning">hallo welt</div>
