--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,8 +22,9 @@ img {
 }
 
 .input {
-    padding: 10px 20px 10px 10px;
+    padding: 12px 20px 12px 12px;
     background-color: #F4F4F4;
+    width: 60vw;
     border: none;
     font-family: inherit;
 }
@@ -61,40 +62,38 @@ input::-webkit-inner-spin-button {
       
 }
 
-//cities test
-/* Style the tab */
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-  }
-  
-  /* Style the buttons inside the tab */
-  .tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-    font-size: 17px;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #ddd;
-  }
-  
-  /* Create an active/current tablink class */
-  .tab button.active {
-    background-color: #ccc;
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-  }
+.tabs {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 0;
+    margin-left: 0;
+    border-width: 1px;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+}
+
+ul {
+    list-style-type: none;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0;
+}
+
+.nav-item {
+    border-bottom: 1px solid #ddd;
+
+    &:hover {
+        border: 1px 1px 0px 1px solid #ddd;
+        
+    }
+}
+
+a {
+    margin-right: 48px;
+    text-decoration: none;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
