--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,13 @@
 <div TABS>
     <ul class="tabs">
         <li class="nav-item" id="reiter1" (click)="changeTab('reiter1')">
-            <a class="nav-link" href="#"> Reiter 1</a>
+            <a class="nav-link" href="#"> Reiter1</a>
         </li>
         <li class="nav-item" id="reiter2" (click)="changeTab('reiter2')">
-            <a class="nav-link" href="#">Reiter 2</a>
+            <a class="nav-link" href="#">Reiter2</a>
+        </li>
+        <li class="nav-item" id="anmerkung" (click)="changeTab('anmerkung')">
+            <a class="nav-link" href="#">Anmerkung</a>
         </li>
     </ul>
     <div CONTENT class="content">
@@ -20,12 +23,14 @@
                 <span>Gib eine Zeichenkette ein, die nur aus folgenden Zeichen besteht: <i>acdefhlmnoprstuw.</i></span>
             </div>  
             <div class="margin-bottom">
-                <input class="input" #inputText type="text" placeholder="Gib eine Zeichenkette ein">
+                <input class="input" #inputText type="text" placeholder="Zeichenkette...">
                 <button class="button" (click)="GetHashwert(inputText)">Prüfen</button>
             </div> 
             <div>
+            <div class="alert-warning">
                 <!--hier wird Hashwert oder Fehlermeldung angezeigt-->
-            <label class="label margin-bottom">{{ hashwertResult }}</label>
+                <label class="margin-bottom">{{ hashwertResult }}</label>
+            </div>
             </div> 
         </div>      
         <div REITER2 class="content-value column" *ngIf="id === 'reiter2'">
@@ -34,13 +39,20 @@
             </div> 
             <div class="margin-bottom">
                 <input class="input" type="number" 
-                placeholder="Gib einen Hashwert ein">
+                placeholder="Hashwert...">
                 <button class="button">Prüfen</button>
             </div>       
             <div>
-                <!-- hier wird gesuchte Zeichenkette oder Fehlermeldung angezeigt -->
-                <label class="label margin-bottom"></label>
+                <div class="alert-warning">
+                    <!-- hier wird gesuchte Zeichenkette oder Fehlermeldung angezeigt -->
+                    <label class="margin-bottom"></label>
+                </div>
             </div>
+        </div>           
+        <div ANMERKUNG class="content-value column" *ngIf="id === 'anmerkung'">
+            <div class="margin-bottom">
+                <span>Hallo Zusammen, <br><br>ich finde diese Aufgabe sehr spannend und auch herausfordernd. Leider habe ich den Code für den Reiter 2 nicht ganz fertig bekommen. Dennoch bin ich froh und zufrieden mit meiner Leistung, da ich im Rahmen meiner Front-end Ausbildung noch an den Angular Projekten arbeite. <br>Vor allem bin ich stolz, dass ich die gesuchte Zeichenkette "schule" mit mathematischem Ansatz finden konnte.<br>Ich freue mich auf Ihr Feedback und das zweite Gespräch.<br><br>Besten Gruß<br> Valentina Kuxhausen </span>
+            </div> 
         </div>           
     </div>
 </div>
